# CryOdyssey

./: .gitignore  Game.cryproject  GameFullscreen.cryproject
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
Code/Components/: ClearAllComponents.cpp  ClearAllComponents.h  ControllableTimer.cpp  ControllableTimer.h  EntityLinks.cpp  EntityLinks.h  InterfaceComponent.cpp
Code/Components/Camera/: CameraController.cpp  CameraController.h
Code/Components/Environment/: Door.cpp  Door.h  GrabObject.cpp  GrabObject.h  Lever.cpp  Lever.h  Light.cpp  Light.h  Note.cpp  Note.h  Switch.cpp  Switch.h  ViewPlace.cpp  ViewPlace.h
Code/Components/Game/: AreaTrigger.cpp  AreaTrigger.h  BodyDamageComponent.cpp  BodyDamageComponent.h  CinematicTrigger.cpp  CinematicTrigger.h  HealthComponent.cpp  SpawnPoint.cpp  SpawnPoint.h
Code/Components/Items/: ItemComponent.cpp  ItemComponent.h  RifleComponent.cpp  RifleComponent.h
Code/Components/Physics/: CollisionMask.cpp  CollisionMask.h  ExplosionComponent.cpp  ExplosionComponent.h
Code/Components/Player/: PlayerAnimationComponent.cpp  PlayerAnimationComponent.h  PlayerAttachments.cpp  PlayerAttachments.h  PlayerComponent.cpp  PlayerComponent.h  PlayerInteractionComponent.cpp  PlayerInteractionComponent.h
Code/Components/Vehicle/: VehicleController.cpp  VehicleController.h
Code/Core/: Game.cpp  Game.h
Code/Core/Components/: EventSubscriber.cpp  EventSubscriber.h  InputEventListener.cpp  InputEventListener.h
Code/Core/GameEvents/: GameEvents.cpp  GameEvents.h  IGameEvents.h
Code/Core/GameInput/: GameInput.cpp  GameInput.h  IInputEvents.h  InputEvents.cpp  InputEvents.h
Code/Env/: GameEnv.cpp  GameEnv.h
Code/Env/Nodes/: GameFunctions.cpp  GameFunctions.h
Code/FlowNodes/: EntityFlowNode.cpp  EntityFlowNode.h  FlowCameraNodes.cpp  FlowGameNodes.cpp  FlowLocalizationNodes.cpp  FlowMovieCustomNodes.cpp  FlowPlayerNodes.cpp
Code/Interfaces/: IDoor.h  IGrabObject.h  IHandObject.h  IInteractAction.h  IItem.h  ILever.h  IPawn.h  IVehicle.h  IWeapon.h
Docs/: assets.xlsx  characters.txt  concepts.txt  titles.txt
